	src/net/beinghandler.h, src/net/playerhandler.cpp, src/being.h:
	Applied patch put together by Jaxad0127 with changes from the Aethyra
	project. Improves compatibility with the newer version of eAthena and
	works around an initialization bug.
	* data/help/index.txt, data/help/windows.txt: Included some
	documentation for the shortcut window by Vq.

2008-08-28  Philipp Sehmisch  <tmw@crushnet.org>

	* src/net/loginhandler.cpp: Removed the usually incorrect "for 5
	minutes" clause from the message displayed to banned users.

2008-08-27  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/particleemitter.h, src/particle.h, src/particleemitter.cpp,
	src/particle.cpp: Renamed "randomnes" to "randomness", so that it
	won't show up as part of Fate's patch.

2008-08-24  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particleemitter.cpp, src/particleemitter.h: Added new particle
	emitter property "output-pause" which allows to define a fixed (or
	random) interval between two outputs.

2008-08-06  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/window.cpp: Make sure only to save the window state when a
	window name is set, and fail when loadWindowState() is called without
	setting a window name.

2008-08-05  David Athay  <ko2fan@gmail.com>

	* src/gui/setup_video.cpp, src/net/charserverhandler.cpp: Fixed
	alignment issue with fps limit field (patch by Scraggy #384. Also
	fixed small spelling error.

2008-08-04  Dennis Friis  <peavey@placid.dk>

	* src/main.cpp: Fix typo in updatehost reported by Jaxad.

2008-07-27  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp: Target the nearest monster on joystick button 3.

2008-07-25  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/winver.h, README, configure.ac, data/help/changes.txt,
	data/help/header.txt, NEWS, CMakeLists.txt: Updated the version to
	0.0.25, release planned this Sunday.
	* README, data/help/commands.txt: Added documentation for F8 to toggle
	shortcut window.
