@@ -407,7 +407,13 @@ MapReader::readLayer(xmlNodePtr node, Map *map)
                     setTile(map, layer, x, y, gid);
 
                     x++;
-                    if (x == w) {x = 0; y++;}
+                    if (x == w) {
+                        x = 0; y++;
+
+                        // When we're done, don't crash on too much data
+                        if (y == h)
+                            break;
+                    }
                 }
                 free(binData);
             }
